Bug: align search bar and button

--- a/_sass/components/search-bar.scss
+++ b/_sass/components/search-bar.scss
@@ -1,11 +1,20 @@
 form.search-form {
+  margin-bottom: 0;
 
   input[type=text]#search-box {
     display: inline-block;
     vertical-align: middle;
-    height: 30px;
-    width: 200px;
-    font-size: 12px;
+    width: auto;
+    font-size: 14px;
+    line-height: 1;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
   }
 
   button[type=submit] {
@@ -13,21 +22,21 @@ form.search-form {
     vertical-align: middle;
     background-color: $blue;
     color: $white;
-    padding: 4px 12px;
+    height: 34px;
+    padding: 7px 12px;
     margin-bottom: 0;
     font-size: 14px;
-    font-weight: 400;
-    line-height: 1.42857143;
+    //font-weight: 400;
     text-align: center;
     white-space: nowrap;
     //-ms-touch-action: manipulation;
-    touch-action: manipulation;
-    cursor: pointer;
-    -webkit-user-select: none;
+    //touch-action: manipulation;
+    //cursor: pointer;
+    //-webkit-user-select: none;
     //-moz-user-select: none;
     //-ms-user-select: none;
     //user-select: none;
-    background-image: none;
+    //background-image: none;
     border: 1px solid transparent;
     border-radius: 4px;
 
